# AMatrix

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
benchmarks/: CMakeLists.txt  benchmark_matrix.cpp  profile_matrix.cpp  timer.h
include/: access_category.h  amatrix.h  dense_storage.h  matrix.h  matrix_expression.h  matrix_expression_iterator.h  matrix_iterator.h  matrix_storage.h  sparse_graph.h  sparse_matrix.h  sparse_matrix_storage.h
test/: .travis.yml  CMakeLists.txt  checks.h  test_csr_matrix_access.cpp  test_csr_matrix_graph.cpp  test_csr_matrix_iterator.cpp  test_csr_matrix_product.cpp  test_dynamic_matrix_access.cpp  test_dynamic_matrix_assign.cpp  test_dynamic_matrix_initialize.cpp  test_dynamic_matrix_minus.cpp  test_dynamic_matrix_plus.cpp  test_dynamic_matrix_product.cpp  test_dynamic_matrix_resize.cpp  test_dynamic_matrix_scale_and_add.cpp  test_dynamic_matrix_swap.cpp  test_dynamic_matrix_transpose.cpp  test_matrix.cpp  test_matrix_access.cpp  test_matrix_aliasing.cpp  test_matrix_assign.cpp  test_matrix_column.cpp  test_matrix_fill.cpp  test_matrix_initialize.cpp  test_matrix_iterator.cpp  test_matrix_lu.cpp  test_matrix_minus.cpp  test_matrix_plus.cpp  test_matrix_print.cpp  test_matrix_product.cpp  test_matrix_row.cpp  test_matrix_row_col_iterators.cpp  test_matrix_scalar_division.cpp  test_matrix_scale_and_add.cpp  test_matrix_sub_matrix.cpp  test_matrix_sub_vector.cpp  test_matrix_transpose.cpp  test_sparse_graph.cpp  test_sparse_matrix_access.cpp  test_sparse_matrix_iterator.cpp  (+8 more)
