include_directories("${PROJECT_SOURCE_DIR}/include")

function(add_amatrix_test TEST_NAME)
    add_executable(${TEST_NAME} ${PROJECT_SOURCE_DIR}/test/${TEST_NAME}.cpp)
    add_test(${TEST_NAME} ${TEST_NAME})
    install(TARGETS ${TEST_NAME} DESTINATION "${PROJECT_SOURCE_DIR}/bin")
endfunction()

add_amatrix_test(test_matrix_access)
add_amatrix_test(test_matrix_initialize)
add_amatrix_test(test_matrix_assign)
add_amatrix_test(test_matrix_plus)
add_amatrix_test(test_matrix_minus)
add_amatrix_test(test_matrix_product)
add_amatrix_test(test_matrix_transpose)
add_amatrix_test(test_dynamic_matrix_access)
add_amatrix_test(test_dynamic_matrix_assign)
add_amatrix_test(test_dynamic_matrix_minus)
add_amatrix_test(test_dynamic_matrix_plus)
add_amatrix_test(test_dynamic_matrix_product)
add_amatrix_test(test_dynamic_matrix_transpose)
